# EduPPTXGenerator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  refresh_background_keywords.py  小蝌蚪找妈妈.md  秋天的怀念.md
docs/: ARCHITECTURE.md  design-asset-extension-guide.md  design-philosophy.md  layout-system.md  page-template-guide.md  svg-pipeline.md
edupptx/: __init__.py  agent.py  asset_ingest_worker.py  backgrounds.py  cli.py  config.py  content_planner.py  design_system.py  diagram_gen.py  diagram_native.py  generator.py  icons.py  layout_engine.py  layout_resolver.py  llm_client.py  material_library.py  models.py  pipeline_v2.py  pptx_writer.py  renderer.py  session.py  style_negotiator.py  style_resolver.py  style_schema.py  validator.py  xml_patches.py
examples/: agent_usage.py  basic_usage.py
output_db/: ai_image_asset_db.json
scripts/: archive_unindexed_ppt_skip_images.py  backfill_caption.py  backfill_plan_grade_subject.py  backfill_ppt_source_refs.py  backfill_pptx_processed_manifest.py  build_ppt_materials_library.py  build_ppt_reuse_ground_truth.py  dedupe_ppt_materials_library.py  dry_run_caption_classify.py  dry_run_general_classify.py  dry_run_llm_classify.py  dry_run_query_classify.py  extract_unindexed_pptx_originals.py  generate_reuse_caption_goldset.py  inspect_ai_image_embedding_reuse.py  migrate_padding_capacity_field.py  rebuild_ppt_materials_embeddings.py  report_missing_pptx_materials.py  rerun_ppt_skip_images_with_vlm.py  strict_reuse_v6_codex_labels.py  update_ppt_actual_dimensions.py  write_rerun_from_pptx_debug.py
(+244 files in other folders)
